html file completed

--- a/version2.ipynb
+++ b/version2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,6 +220,88 @@
    "source": [
     "df = pd.read_csv('dataset.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 0    14737\n",
+       "-1     5686\n",
+       " 1     3688\n",
+       "-2     2759\n",
+       " 2     2667\n",
+       " 3      322\n",
+       " 4       76\n",
+       " 5       26\n",
+       " 8       19\n",
+       " 6       11\n",
+       " 7        9\n",
+       "Name: PAY_0, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.PAY_0.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    15964\n",
+       "1    13659\n",
+       "3      323\n",
+       "0       54\n",
+       "Name: MARRIAGE, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.MARRIAGE.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    14030\n",
+       "1    10585\n",
+       "3     4917\n",
+       "5      280\n",
+       "4      123\n",
+       "6       51\n",
+       "0       14\n",
+       "Name: EDUCATION, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.EDUCATION.value_counts()"
    ]
   },
   {
