--- a/credit_card.ipynb
+++ b/credit_card.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.svm import SVC\n",
+    "from xgboost import XGBClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.metrics import precision_recall_fscore_support, roc_auc_score, accuracy_score\n",
@@ -1289,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,6 +1300,7 @@
     "pipeline_dc = Pipeline([('dc_model', DecisionTreeClassifier())])\n",
     "pipeline_rf = Pipeline([('rf_model', RandomForestClassifier())])\n",
     "pipeline_nb = Pipeline([('guass_model', GaussianNB())])\n",
+    "pipeline_xg = Pipeline([('xgboost', XGBClassifier())])\n",
     "\n",
     "\n",
     "logging.info('Pipeline created for all models')"
@@ -1306,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1331,7 @@
       "\n",
       "Model name : Decision Tree\n",
       "Accuracy is: 0.73\n",
-      "Precision is: 0.73\n",
+      "Precision is: 0.74\n",
       "Recall is: 0.73\n",
       "Fscore is: 0.73\n",
       "AUC is: 0.62\n",
@@ -1347,6 +1349,13 @@
       "Recall is: 0.36\n",
       "Fscore is: 0.32\n",
       "AUC is: 0.55\n",
+      "\n",
+      "Model name : XGBoost\n",
+      "Accuracy is: 0.82\n",
+      "Precision is: 0.80\n",
+      "Recall is: 0.82\n",
+      "Fscore is: 0.81\n",
+      "AUC is: 0.66\n",
       "\n"
      ]
     }
@@ -1357,7 +1366,8 @@
     "    'SVM' : pipeline_svc,\n",
     "    'Decision Tree' : pipeline_dc,\n",
     "    'Random Forest' : pipeline_rf,\n",
-    "    'Naive Bayes' : pipeline_nb\n",
+    "    'Naive Bayes' : pipeline_nb,\n",
+    "    'XGBoost' : pipeline_xg\n",
     "}\n",
     "\n",
     "def model_prediction(name, model):\n",
@@ -1383,34 +1393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### XGBoost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model name : XGBoost\n",
-      "Accuracy is: 0.82\n",
-      "Precision is: 0.80\n",
-      "Recall is: 0.82\n",
-      "Fscore is: 0.81\n",
-      "AUC is: 0.66\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from xgboost import XGBClassifier\n",
-    "xg = XGBClassifier()\n",
-    "model_prediction('XGBoost',xg)\n",
-    "\n",
-    "logging.info('XGBoost prediction and metrics evaluation')"
+    "XGBoost classifier performs well with good accuracy, precision and recall values. So we will be exporting it to pickle file."
    ]
   },
   {
@@ -1422,11 +1405,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(pipeline_rf, open('credit_default.pkl','wb'))\n",
+    "pickle.dump(pipeline_xg, open('credit_default.pkl','wb'))\n",
     "\n",
     "logging.info('model exported as credit_default.pkl file')"
    ]
